2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/parser.c: Added support for parsing (and ignoring) comments,
	and updated the test program accordingly.

2008-05-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/main-window.h:
	* src/Makefile.am:
	* data/mcus.ui: Some initial work on a basic UI, as well as a small
	test program.
	* src/instructions.h:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h: Fixes for small parser bugs and the introduction of
	simulation iteration. The system has now been tested with a few
	small programs, and so far seems to work through them properly.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Ignored some more files.
	* src/Makefile.am:
	* src/instructions.h:
	* src/interface.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h: Fixed build errors and warnings and the program
	now compiles.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/instructions.h:
	* src/main.h:
	* src/parser.c:
	* src/parser.h: Compilation of the parse tree to the microcontroller
	memory is now supported.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/parser.c:
	* src/parser.h: Converted the parser to use GErrors appropriately.

2008-05-18  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Ignored a load of files.
	* src/instruction.c:
	* src/instruction.h:
	* src/instructions.h: Removed MCUSInstruction as a GObject and
	replaced it with a simple struct, private to the parser. Instructions
	will now canonically be represented as opcodes in memory.
	* src/parser.c:
	* src/parser.h: Work on the parser, which now theoretically supports
	instructions, operands and labels, although doesn't yet support
	subroutines or comments.

2008-05-17  Philip Withnall  <philip@tecnocode.co.uk>

	Initial commit.